# initialTrouble

./: .gitignore  Makefile  README.md  desktop_main.py  env.example  environment.yml  pyproject.toml  techtim.spec
analytics/: __init__.py  api.py  collector.py  cost.py  models.py  patterns.py  storage.py
backend/: __init__.py  chat_service.py  cli.py  config.py  logging_config.py  main.py  preferences.py  prompts.py
backend/agents/: __init__.py  base.py  linux.py  macos.py  manager.py  windows.py
backend/diagnostics/: __init__.py  adapter.py  base.py  bluetooth.py  connectivity.py  dns.py  ip_config.py  ip_reset.py  platform.py  process_mgmt.py  reachability.py  runner.py  temp_files.py  vpn.py  wifi.py
backend/diagnostics/linux/: __init__.py  check_adapter_status.sh  cleanup_temp_files.sh  common.sh  enable_wifi.sh  flush_dns.sh  get_ip_config.sh  ip_release.sh  ip_renew.sh  kill_process.sh  ping_address.sh  ping_dns.sh  ping_gateway.sh  test_dns_resolution.sh  test_vpn_connectivity.sh  toggle_bluetooth.sh  traceroute.sh
backend/diagnostics/macos/: __init__.py  check_adapter_status.sh  cleanup_temp_files.sh  common.sh  enable_wifi.sh  flush_dns.sh  get_ip_config.sh  ip_release.sh  ip_renew.sh  kill_process.sh  ping_address.sh  ping_dns.sh  ping_gateway.sh  test_dns_resolution.sh  test_vpn_connectivity.sh  toggle_bluetooth.sh  traceroute.sh
backend/diagnostics/windows/: __init__.py  dell_audio.py  log_analysis.py  office_repair.py  robocopy.py  system_repair.py
backend/diagnostics/windows_scripts/: __init__.py  check_adapter_status.ps1  cleanup_temp_files.ps1  common.ps1  enable_wifi.ps1  fix_dell_audio.ps1  flush_dns.ps1  get_ip_config.ps1  ip_release.ps1  ip_renew.ps1  kill_process.ps1  ping_address.ps1  ping_dns.ps1  ping_gateway.ps1  repair_office365.ps1  (+7 more)
backend/llm/: __init__.py  base.py  gluellm_wrapper.py  ollama_client.py  openai_client.py  result_adapter.py  router.py  tool_adapter.py
backend/tests/: __init__.py  test_diagnostics.py  test_gluellm_wrapper.py  test_new_tools.py  test_platform.py
backend/tools/: __init__.py  api.py  registry.py  schemas.py
data/: analytics.db
desktop/: __init__.py  api.py  exceptions.py  ollama_manager.py  process_guard.py
docs/: ARCHITECTURE_REVIEW.md  DEVELOPMENT.md  DISTRIBUTION.md  VERIFICATION_CHECKLIST.md  output.md  session_debug_reference.md
docs/functions/: check_adapter_status.md  get_ip_config.md  ping_gateway.md
documents/: multi-os-agent-expansion-plan.md  network-diag-tool-calling-fix-plan.md  out2.md  tool_calling_report.md  troubleshooter.md
documents/functions/: _template.md  cleanup_temp_files.md  enable_wifi.md  fix_dell_audio.md  kill_process.md  ping_dns.md  repair_office365.md  review_system_logs.md  run_dism_sfc.md  test_dns_resolution.md  test_vpn_connectivity.md
frontend/doccs/: VERIFICATION_CHECKLIST.md  frontend_design.md  headless-patterns.md
frontend/docs/: PHASE-2-LIBRARIES.md  PHASE-3-HOOKS.md  VERIFICATION_CHECKLIST.md
frontend/techtime/: next.config.ts  package-lock.json  package.json
prompts/: README.md  cli_cloud_agent.md  default_agent.md  diagnostic_agent.md  linux_agent.md  macos_agent.md  manager_agent.md  quick_check_agent.md  remediation_agent.md  triage_agent.md  windows_agent.md
resources/icons/: .gitkeep  README.md
scripts/: __init__.py  build_app.py  build_frontend.py  distribute_macos.py  distribute_windows.py  download_ollama.py  test_diagnostics.ps1  test_diagnostics.sh  validate_tools_sync.py
temp/: APP_SUMMARY.md  ARCHITECTURE_IMPROVEMENTS.md  phase1_updated.md  phase2_updated.md  phase6_updated.md  plan_01_split_prompts.md  plan_02_input_validation.md  plan_03_retry_logic.md  plan_04_reasoning_context.md  plan_05_tool_examples.md  plan_06_response_validation.md  temo.md
temp/completed/: phase3_updated.md  phase4_updated.md  phase5_updated.md  phase7_polish.md  phase8_updated.md
tests/: README.md  __init__.py  conftest.py
tests/fixtures/: __init__.py  mock_ollama.py  sample_data.py
tests/integration/: __init__.py  test_api_bridge.py  test_full_chat.py
tests/unit/: __init__.py  test_chat_service.py  test_config.py  test_ollama_manager.py  test_prompts.py
(+78 files in other folders)
