[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "techtime"
version = "0.1.0"
description = "AI-powered L1 desktop support assistant"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "TechTime Team"}
]
keywords = ["desktop", "support", "troubleshooting", "ai", "llm", "l1", "helpdesk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
]

dependencies = [
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "ollama>=0.1.6",
    "openai>=1.10.0",
]

[project.optional-dependencies]
# Backend server dependencies
server = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "python-multipart>=0.0.6",
]

# Desktop application dependencies
desktop = [
    "pywebview>=5.0",
    "httpx>=0.26.0",
]

# Build and distribution dependencies
build = [
    "pyinstaller>=6.0",
]

# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

# All dependencies for full development
all = [
    "techtime[server,desktop,build,dev]",
]

[project.scripts]
# CLI entry points
techtime = "backend.cli:main"
techtime-server = "backend.cli:run_server"
techtime-desktop = "desktop_main:main"

[project.urls]
Homepage = "https://github.com/example/techtime"
Documentation = "https://github.com/example/techtime#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "desktop*", "analytics*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests", "tests"]
pythonpath = ["."]
addopts = "-v --tb=short --strict-markers -ra"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "requires_ollama: marks tests that need a running Ollama instance",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]


